# python_tic-tac-toe

./: Fps.py  Main.py  README.md  TicTacToe.py  requirements.txt  setup.cfg
gui/: Layouts.py  Text.py  Widget.py  __init__.py
src/python_tic_tac_toe/: Main.py  TicTacToe.py  colors.py  main.py  player.py  tic_tac_toe.py
src/python_tic_tac_toe/gui/: Layouts.py  Widget.py  __init__.py
