[options]
packages = find:
install_requires = file: requirements.txt
include_package_data = True
package_dir =
    =src

[options.entry_points]
console_scripts =
    python_tic_tac_toe = python_tic_tac_toe.Main:main

[options.packages.find]
where = src/

[metadata]
name = python_tic_tac_toe
version = attr: python_tic_tac_toe.__version__
author = kleist0202
author_email = pk0202@protonmail.com
url = https://github.com/kleist0202/python_tic-tac-toe
description = Non-extraordinary python GUI written in pygame.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python_tic_tac_toe, setuptools, gui
license = GPL2
classifiers =
    Programming Language :: Python :: 3
